# final-project-xuxey

./: .gitignore  CMakeLists.txt  DEV.md  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/interface/: breakout_app.h  layout.h  ui_section.h  user_interface.h
include/logic/: brick_gen.h  brick_schema.h  classic_schema.h  game_mode.h  score_board.h
include/logic/gamemodes/: classic_mode.h  easy_mode.h  game_mode.h  hard_mode.h
include/objects/: ball.h  brick.h  plate.h
include/sections/: button.h  score_view.h  text_section.h  world.h
src/interface/: breakout_app.cc  layout.cc  ui_section.cc  user_interface.cc
src/logic/: brick_gen.cc  brick_schema.cc  classic_schema.cc  score_board.cc
src/logic/gamemodes/: classic_mode.cc  easy_mode.cc  hard_mode.cc
src/objects/: ball.cc
src/sections/: button.cc  score_view.cc  text_section.cc  world.cc
tests/: test_ball_collisions.cc  test_brick_collisions.cc  test_brick_gen.cc  test_wall_collisions.cc
vc2015/: CinderProject.sln  CinderProject.vcxproj  CinderProject.vcxproj.filters  Resources.rc
